--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 :root {
    --nav-color: rgb(0, 162, 255);
+   --nav-color-hover:  rgb(7, 120, 185);
    --card-text-color:rgb(0, 162, 255);
    --container-bgd:rgb(240, 240, 240);
    --card-bgd:white;
@@ -92,10 +93,11 @@
 .navigation {
     display: flex;
     align-items: center;
-    width: 90%;
-    height: 50px;
-    border: 1px solid red;
     margin: 20px auto;
+    width: 90%;
+    height: 60px;
+   
+   
 }
 
 .nav {
@@ -104,40 +106,68 @@
     width: 60%;
     height: 100%;
     list-style: none;
-    border: 1px solid green;
+   
 }
-.nav li {
-    display: inline-block;
+.nav > li {
+    display: flex;
+    align-items: center;
     position: relative;    
-    height: 80%;
+    height: 80%;    
     margin-right: 15px;
     
     
 }
 
-.nav li:after {
-    content: '';
-    position: absolute;
-    height: 3px;
-    width: 100%;
-    background: var(--nav-color);
-    opacity: 0;
-    visibility: hidden;
+.nav li:hover {
+   border-bottom:2px solid var(--nav-color); 
 }
 
-.nav li:hover + .nav li:after {
-    opacity: 1;
-    visibility: visible;
+.nav li:hover>a {   
+    color: var(--nav-color-hover);
+    
 }
 
-.nav li a {
-    display: flex;
+.nav>li > a {
+    display: block;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height:100%;
+    padding-top: 14px;
     text-decoration: none;
     color: var(--nav-color);
+    
+}
+.nav >li:last-child {
+   
+    position: relative;
+    
+}
+
+.subMenu {
+    
+    display:none;
+    flex-flow: row wrap;
+    position: absolute;
+    top:45px;
+    left: -8px;
+    width: 400px;
+    list-style: none;    
+    background-color: var(--container-bgd);
+    color: var(--nav-color);
+    z-index: 1;
+}
+
+.subMenu > li  {
+   height: 30px;    
+   margin: 10px;
+}
+
+.subMenu > li > a  {
+    height: 30px;
+    text-decoration: none;
+    color: var(--nav-color);
+    padding-top: 5px;
 }
 
 /* ************ end Navigation ************* */
