--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
 }
 
 :root {
-   --nav-color: rgb(0, 162, 255);
-   --nav-color-hover:  rgb(7, 120, 185);
-   --card-text-color:rgb(0, 162, 255);
-   --container-bgd:rgb(240, 240, 240);
-   --card-bgd:white;
-   --search:white;
+    --nav-color: rgb(0, 162, 255);
+    --nav-color-hover: rgb(7, 120, 185);
+    --card-text-color: rgb(0, 162, 255);
+    --container-bgd: rgb(240, 240, 240);
+    --card-bgd: white;
+    --search: white;
 }
 
 .container {
@@ -33,10 +33,10 @@
 
 .header__container {
     width: 100%;
-    height: 100px;  
-    background:linear-gradient(to bottom, rgba(0,0,0,.4) 50%, rgba(255,255,255,.1) 100%);
-    
-    
+    height: 100px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, .4) 50%, rgba(255, 255, 255, .1) 100%);
+
+
 }
 
 .header__search {
@@ -56,9 +56,11 @@
     border-radius: 5px;
     border: 2px solid var(--search);
 }
-.form input, .form button {
-    
-    height: 100%;    
+
+.form input,
+.form button {
+
+    height: 100%;
     background: transparent;
     color: var(--search);
     border: none;
@@ -73,7 +75,7 @@
 }
 
 .form input::placeholder {
-    color: rgba(255, 255, 255,.8);
+    color: rgba(255, 255, 255, .8);
     font-weight: 300;
     font-size: 16px;
 }
@@ -82,7 +84,7 @@
     width: 15%;
     font-size: 18px;
     cursor: pointer;
-    
+
 }
 
 /* end Header */
@@ -96,86 +98,167 @@
     margin: 20px auto;
     width: 90%;
     height: 60px;
-   
-   
+
+
 }
 
 .nav {
-    display: flex;    
+    display: flex;
     align-items: center;
     width: 60%;
     height: 100%;
     list-style: none;
-   
+
 }
-.nav > li {
+
+.nav>li {
     display: flex;
     align-items: center;
-    position: relative;    
-    height: 80%;    
+    position: relative;
+    height: 80%;
     margin-right: 15px;
-    
-    
+    color: var(--nav-color);
+
 }
 
 .nav li:hover {
-   border-bottom:2px solid var(--nav-color); 
+    border-bottom: 2px solid var(--nav-color);
 }
 
-.nav li:hover>a {   
-    color: var(--nav-color-hover);
-    
+.nav li:hover > a {
+    color: var(--nav-color-hover) !important;
+
 }
 
-.nav>li > a {
+.nav>li>a {
     display: block;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height:100%;
+    height: 100%;
     padding-top: 14px;
     text-decoration: none;
     color: var(--nav-color);
-    
+
 }
-.nav >li:last-child {
-   
+
+.nav>li:last-child,
+.nav>li:last-child>a {
     position: relative;
+    width: 65px;
+    transition: all .2s linear;
+
+}
+
+.nav>li:last-child>a::after {
+    position: absolute;
+    right: 0%;
+    top: 25%;
+    transform: rotate(45deg);
+    transition: transform .3s linear;
+    content: '\25e2';
+}
+
+.active::after {
+    position: absolute;
+    right: 0%;
+    top: 25%;
+    transform: rotate(225deg) !important;
+    transform-origin: 50% 60%;
+    transition: transform .3s linear;
+    content: '\25e2';
+}
+
+.view {
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+    list-style: none;
     
 }
 
-.subMenu {
+.view li {
+    width:25px;
+    height: 25px;
+    background-color: var(--nav-color);
+    align-items: center;
+    position: relative;    
+    margin-right: 15px;
+    color: var(--nav-color);
     
-    display:none;
-    grid-template-columns: repeat(auto-fill, minmax(100px,1fr));
-    grid-auto-rows:auto;   
+}
+
+.view li > a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.view li > .view_four::before, 
+.view li > .view_two::before  {
     position: absolute;
-    top:45px;
-    left: -8px;   
-    max-width:300px;    
-    list-style: none;    
+    content: '';
+    top: 11px;
+    left: 0px;
+    width: 100%;
+    height: 3px;    
+    background-color:var(--container-bgd);
+
+}
+
+.view li > .view_four::after {
+    position: absolute;
+    content: '';
+    top: 11px;
+    left: 0px;
+    transform: rotate(90deg);
+    width: 100%;
+    height: 3px;    
+    background-color:var(--container-bgd);
+   
+
+}
+
+.view_four:hover,
+.view_two:hover  {
+    background-color:var(--nav-color-hover);
+}
+
+.subMenu {
+
+    display: none;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-auto-rows: auto;
+    position: absolute;
+    top: 45px;
+    left: -8px;
+    max-width: 300px;
+    list-style: none;
     background-color: var(--container-bgd);
     color: var(--nav-color);
     z-index: 1;
 }
 
-.subMenu > li  {
+.subMenu>li {
     display: block;
     width: auto;
     height: 30px;
-    margin: 5px;    
-   
-   
+    margin: 5px;
+
+
 }
 
-.subMenu > li > a  {
+.subMenu>li>a {
     display: block;
     width: 100%;
     height: 30px;
     text-decoration: none;
     color: var(--nav-color);
     /* padding-left: 10px; */
-    
+
 
 }
 
@@ -186,7 +269,7 @@
     width: 90%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(260px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-template-rows: auto 1fr;
     gap: 20px;
 }
@@ -199,12 +282,12 @@
 
 .card__img {
     width: 100%;
-    
-    
+
+
 }
 
 .card__img img {
-    display: block;   
+    display: block;
     width: 100%;
     height: auto;
 }
@@ -213,20 +296,20 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 30px 16px;    
+    margin: 30px 16px;
     /* width: 100%; */
-   
-   
+
+
 }
 
 .card__text {
     width: 80%;
-   
+
 }
 
 .card__rating {
     width: 20%;
-    
+
 }
 
 .card__text h2 {
@@ -235,22 +318,22 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    
+
 }
 
 .card__text h6 {
     margin-top: 10px;
     font-size: 14px;
-    color: var( --card-text-color);
+    color: var(--card-text-color);
 }
 
 .card__rating {
     display: block;
     width: 30px;
     text-align: center;
-    border: 1px solid var( --card-text-color);
+    border: 1px solid var(--card-text-color);
     border-radius: 3px;
-    color: var( --card-text-color);
+    color: var(--card-text-color);
 }
 
 /* ************ end Card ************** */
